I added the 5 columns of divs in HTML. In CSS, I changed the height and width of the columns. At this time, I've added colors in CSS just to see what it would look like.
Next action items are:
1. Create an array of arrays of objects, which will contain sets of 5 colors with the name and HEX code.
2. Create sticky nav bar in HTML
3. Create JS function where clicking on space would change the colors of the panel and display the HEX code and the name of the color within the panel.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+  <div id = "colors">
+    <div id = "color_1" class = "column"></div>
+    <div id = "color_2" class = "column"></div>
+    <div id = "color_3" class = "column"></div>
+    <div id = "color_4" class = "column"></div>
+    <div id = "color_5" class = "column"></div>
+  </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
+
+<!-- Action items:
+1. Make sticky nav bar
+ -->
