--- a/index.html
+++ b/index.html
@@ -5,14 +5,54 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <div id = "colors">
-    <div id = "color_1" class = "column"></div>
-    <div id = "color_2" class = "column"></div>
-    <div id = "color_3" class = "column"></div>
-    <div id = "color_4" class = "column"></div>
-    <div id = "color_5" class = "column"></div>
+
+<nav class="navbar">
+  <div class="navbar-left">
+    <a class="navbar-brand" href="#">coolers + SKILLSHARE</a>
   </div>
+  <div class="navbar-right">
+    <a href="#">Generate</a>
+    <a href="#">Explore</a>
+    <span class="divider"></span>
+    <a href="#">iOS App</a>
+    <a href="#">Add-on</a>
+    <a href="#">Chrome Extension</a>
+    <div class="dropdown">
+      <button class="dropbtn">
+      More
+      <span class="caret"></span>
+      </button>
+        <div class="dropdown-content">
+          <a href="#">Support</a>
+          <a href="#">Legal</a>
+          <a href="#">Press</a>
+          <a href="#">Contact</a>
+        </div>
+    </div>
+    <span class="divider"></span>
+    <a href="#">Login</a>
+    <a href="#">Sign Up</a>
+  </div>
+</nav>
+
+<hr>
+
+<div class="subheader">
+  <div class="instructions">
+    <p>Press the space bar to generate color schemes!</p>
+  </div>
+</div>
+
+  <div id="colors">
+    <div id="color_1" class="column"></div>
+    <div id="color_2" class="column"></div>
+    <div id="color_3" class="column"></div>
+    <div id="color_4" class="column"></div>
+    <div id="color_5" class="column"></div>
+  </div>
+
   <script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
 
