Created arrays with colors HEX and names.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 </div>
 
   <div id="colors">
-    <div id="color_1" class="column"></div>
+    <div id="color_1" class="column">
+
+    </div>
     <div id="color_2" class="column"></div>
     <div id="color_3" class="column"></div>
     <div id="color_4" class="column"></div>
