fixed more dropdown with javascript.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <a href="#">Add-on</a>
     <a href="#">Chrome Extension</a>
     <div class="dropdown">
-      <button class="dropbtn">
+      <button class="dropbtn" id="more">
       More
       <span class="caret"></span>
       </button>
-        <div class="dropdown-content">
+        <div class="dropdown-content" id="dropdown">
           <a href="#">Support</a>
           <a href="#">Legal</a>
           <a href="#">Press</a>
